package com.whollyframework.protobuf;
option java_package = "com.whollyframework.protobuf.model";
option java_outer_classname = "EnumTypeProtos";

enum EnumType {
	UNIVERSAL = 0;
	WEB = 1;
	IMAGES = 2;
	LOCAL = 3;
	NEWS = 4;
	PRODUCTS = 5;
	VIDEO = 6;
}